zynthesiser/grammars/TermParser.py
# Generated from Term.g4 by ANTLR 4.7.2
# encoding: utf-8
import sys
from io import StringIO
from typing.io import TextIO

from antlr4 import *




class TermParser(Parser):

    grammarFileName = "Term.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'let'",
        "'Constant'",
        "'Variable'",
        "'InputVariable'",
        "'LocalVariable'",
        "'Int'",
        "'Bool'",
        "'Real'",
        "'BitVec'",
        "'Enum'",
        "'Array'",
        "'::'",
        "'('",
        "')'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "LEFT_PARENS",
        "RIGHT_PARENS",
        "SYMBOL",
        "QUOTED_LITERAL",
        "POSITIVE_INT_CONST",
        "NEGATIVE_INT_CONST",
        "REAL_CONST",
        "BOOL_CONST",
        "BV_CONST",
        "COMMENT",
        "WHITESPACE",
        "NEWLINE",
    ]

    RULE_nt_def = 0
    RULE_term = 1
    RULE_let_term = 2
    RULE_g_term = 3
    RULE_let_g_term = 4
    RULE_sort_expr = 5
    RULE_literal = 6
    RULE_enum_const = 7

    ruleNames = [
        "nt_def",
        "term",
        "let_term",
        "g_term",
        "let_g_term",
        "sort_expr",
        "literal",
        "enum_const",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    LEFT_PARENS = 13
    RIGHT_PARENS = 14
    SYMBOL = 15
    QUOTED_LITERAL = 16
    POSITIVE_INT_CONST = 17
    NEGATIVE_INT_CONST = 18
    REAL_CONST = 19
    BOOL_CONST = 20
    BV_CONST = 21
    COMMENT = 22
    WHITESPACE = 23
    NEWLINE = 24

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class Nt_defContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.LEFT_PARENS)
            else:
                return self.getToken(TermParser.LEFT_PARENS, i)

        def SYMBOL(self):
            return self.getToken(TermParser.SYMBOL, 0)

        def sort_expr(self):
            return self.getTypedRuleContext(TermParser.Sort_exprContext, 0)

        def RIGHT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.RIGHT_PARENS)
            else:
                return self.getToken(TermParser.RIGHT_PARENS, i)

        def g_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.G_termContext)
            else:
                return self.getTypedRuleContext(TermParser.G_termContext, i)

        def getRuleIndex(self):
            return TermParser.RULE_nt_def

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNt_def"):
                return visitor.visitNt_def(self)
            else:
                return visitor.visitChildren(self)

    def nt_def(self):

        localctx = TermParser.Nt_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_nt_def)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self.match(TermParser.LEFT_PARENS)
            self.state = 17
            self.match(TermParser.SYMBOL)
            self.state = 18
            self.sort_expr()
            self.state = 19
            self.match(TermParser.LEFT_PARENS)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 20
                self.g_term()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (
                    (
                        ((_la) & ~0x3F) == 0
                        and (
                            (1 << _la)
                            & (
                                (1 << TermParser.LEFT_PARENS)
                                | (1 << TermParser.SYMBOL)
                                | (1 << TermParser.POSITIVE_INT_CONST)
                                | (1 << TermParser.NEGATIVE_INT_CONST)
                                | (1 << TermParser.REAL_CONST)
                                | (1 << TermParser.BOOL_CONST)
                                | (1 << TermParser.BV_CONST)
                            )
                        )
                        != 0
                    )
                ):
                    break

            self.state = 25
            self.match(TermParser.RIGHT_PARENS)
            self.state = 26
            self.match(TermParser.RIGHT_PARENS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return TermParser.RULE_term

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Lit_termContext(TermContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(TermParser.LiteralContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLit_term"):
                return visitor.visitLit_term(self)
            else:
                return visitor.visitChildren(self)

    class Let_term_termContext(TermContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def let_term(self):
            return self.getTypedRuleContext(TermParser.Let_termContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLet_term_term"):
                return visitor.visitLet_term_term(self)
            else:
                return visitor.visitChildren(self)

    class Symbol_termContext(TermContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(TermParser.SYMBOL, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSymbol_term"):
                return visitor.visitSymbol_term(self)
            else:
                return visitor.visitChildren(self)

    class Func_termContext(TermContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.TermContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def SYMBOL(self):
            return self.getToken(TermParser.SYMBOL, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.TermContext)
            else:
                return self.getTypedRuleContext(TermParser.TermContext, i)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunc_term"):
                return visitor.visitFunc_term(self)
            else:
                return visitor.visitChildren(self)

    def term(self):

        localctx = TermParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_term)
        self._la = 0  # Token type
        try:
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                localctx = TermParser.Func_termContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.match(TermParser.LEFT_PARENS)
                self.state = 29
                self.match(TermParser.SYMBOL)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and (
                    (1 << _la)
                    & (
                        (1 << TermParser.LEFT_PARENS)
                        | (1 << TermParser.SYMBOL)
                        | (1 << TermParser.POSITIVE_INT_CONST)
                        | (1 << TermParser.NEGATIVE_INT_CONST)
                        | (1 << TermParser.REAL_CONST)
                        | (1 << TermParser.BOOL_CONST)
                        | (1 << TermParser.BV_CONST)
                    )
                ) != 0:
                    self.state = 30
                    self.term()
                    self.state = 35
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 36
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 2:
                localctx = TermParser.Lit_termContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.literal()
                pass

            elif la_ == 3:
                localctx = TermParser.Symbol_termContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(TermParser.SYMBOL)
                pass

            elif la_ == 4:
                localctx = TermParser.Let_term_termContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.let_term()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Let_termContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.LEFT_PARENS)
            else:
                return self.getToken(TermParser.LEFT_PARENS, i)

        def RIGHT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.RIGHT_PARENS)
            else:
                return self.getToken(TermParser.RIGHT_PARENS, i)

        def term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.TermContext)
            else:
                return self.getTypedRuleContext(TermParser.TermContext, i)

        def SYMBOL(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.SYMBOL)
            else:
                return self.getToken(TermParser.SYMBOL, i)

        def sort_expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.Sort_exprContext)
            else:
                return self.getTypedRuleContext(TermParser.Sort_exprContext, i)

        def getRuleIndex(self):
            return TermParser.RULE_let_term

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLet_term"):
                return visitor.visitLet_term(self)
            else:
                return visitor.visitChildren(self)

    def let_term(self):

        localctx = TermParser.Let_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_let_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(TermParser.LEFT_PARENS)
            self.state = 43
            self.match(TermParser.T__0)
            self.state = 44
            self.match(TermParser.LEFT_PARENS)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 45
                self.match(TermParser.LEFT_PARENS)
                self.state = 46
                self.match(TermParser.SYMBOL)
                self.state = 47
                self.sort_expr()
                self.state = 48
                self.term()
                self.state = 49
                self.match(TermParser.RIGHT_PARENS)
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == TermParser.LEFT_PARENS):
                    break

            self.state = 55
            self.match(TermParser.RIGHT_PARENS)
            self.state = 56
            self.term()
            self.state = 57
            self.match(TermParser.RIGHT_PARENS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class G_termContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return TermParser.RULE_g_term

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Symbol_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SYMBOL(self):
            return self.getToken(TermParser.SYMBOL, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSymbol_g_term"):
                return visitor.visitSymbol_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Lit_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def literal(self):
            return self.getTypedRuleContext(TermParser.LiteralContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLit_g_term"):
                return visitor.visitLit_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Let_g_term_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def let_g_term(self):
            return self.getTypedRuleContext(TermParser.Let_g_termContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLet_g_term_g_term"):
                return visitor.visitLet_g_term_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Variable_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def sort_expr(self):
            return self.getTypedRuleContext(TermParser.Sort_exprContext, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVariable_g_term"):
                return visitor.visitVariable_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Constant_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def sort_expr(self):
            return self.getTypedRuleContext(TermParser.Sort_exprContext, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConstant_g_term"):
                return visitor.visitConstant_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Input_variable_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def sort_expr(self):
            return self.getTypedRuleContext(TermParser.Sort_exprContext, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInput_variable_g_term"):
                return visitor.visitInput_variable_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Local_variable_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def sort_expr(self):
            return self.getTypedRuleContext(TermParser.Sort_exprContext, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLocal_variable_g_term"):
                return visitor.visitLocal_variable_g_term(self)
            else:
                return visitor.visitChildren(self)

    class Func_g_termContext(G_termContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.G_termContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_PARENS(self):
            return self.getToken(TermParser.LEFT_PARENS, 0)

        def SYMBOL(self):
            return self.getToken(TermParser.SYMBOL, 0)

        def RIGHT_PARENS(self):
            return self.getToken(TermParser.RIGHT_PARENS, 0)

        def g_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.G_termContext)
            else:
                return self.getTypedRuleContext(TermParser.G_termContext, i)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunc_g_term"):
                return visitor.visitFunc_g_term(self)
            else:
                return visitor.visitChildren(self)

    def g_term(self):

        localctx = TermParser.G_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_g_term)
        self._la = 0  # Token type
        try:
            self.state = 91
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 5, self._ctx)
            if la_ == 1:
                localctx = TermParser.Func_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.match(TermParser.LEFT_PARENS)
                self.state = 60
                self.match(TermParser.SYMBOL)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((_la) & ~0x3F) == 0 and (
                    (1 << _la)
                    & (
                        (1 << TermParser.LEFT_PARENS)
                        | (1 << TermParser.SYMBOL)
                        | (1 << TermParser.POSITIVE_INT_CONST)
                        | (1 << TermParser.NEGATIVE_INT_CONST)
                        | (1 << TermParser.REAL_CONST)
                        | (1 << TermParser.BOOL_CONST)
                        | (1 << TermParser.BV_CONST)
                    )
                ) != 0:
                    self.state = 61
                    self.g_term()
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 67
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 2:
                localctx = TermParser.Lit_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.literal()
                pass

            elif la_ == 3:
                localctx = TermParser.Symbol_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.match(TermParser.SYMBOL)
                pass

            elif la_ == 4:
                localctx = TermParser.Let_g_term_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 70
                self.let_g_term()
                pass

            elif la_ == 5:
                localctx = TermParser.Constant_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.match(TermParser.LEFT_PARENS)
                self.state = 72
                self.match(TermParser.T__1)
                self.state = 73
                self.sort_expr()
                self.state = 74
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 6:
                localctx = TermParser.Variable_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 76
                self.match(TermParser.LEFT_PARENS)
                self.state = 77
                self.match(TermParser.T__2)
                self.state = 78
                self.sort_expr()
                self.state = 79
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 7:
                localctx = TermParser.Input_variable_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 81
                self.match(TermParser.LEFT_PARENS)
                self.state = 82
                self.match(TermParser.T__3)
                self.state = 83
                self.sort_expr()
                self.state = 84
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 8:
                localctx = TermParser.Local_variable_g_termContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.match(TermParser.LEFT_PARENS)
                self.state = 87
                self.match(TermParser.T__4)
                self.state = 88
                self.sort_expr()
                self.state = 89
                self.match(TermParser.RIGHT_PARENS)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Let_g_termContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.LEFT_PARENS)
            else:
                return self.getToken(TermParser.LEFT_PARENS, i)

        def RIGHT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.RIGHT_PARENS)
            else:
                return self.getToken(TermParser.RIGHT_PARENS, i)

        def g_term(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.G_termContext)
            else:
                return self.getTypedRuleContext(TermParser.G_termContext, i)

        def SYMBOL(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.SYMBOL)
            else:
                return self.getToken(TermParser.SYMBOL, i)

        def sort_expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.Sort_exprContext)
            else:
                return self.getTypedRuleContext(TermParser.Sort_exprContext, i)

        def getRuleIndex(self):
            return TermParser.RULE_let_g_term

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLet_g_term"):
                return visitor.visitLet_g_term(self)
            else:
                return visitor.visitChildren(self)

    def let_g_term(self):

        localctx = TermParser.Let_g_termContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_let_g_term)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(TermParser.LEFT_PARENS)
            self.state = 94
            self.match(TermParser.T__0)
            self.state = 95
            self.match(TermParser.LEFT_PARENS)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self.match(TermParser.LEFT_PARENS)
                self.state = 97
                self.match(TermParser.SYMBOL)
                self.state = 98
                self.sort_expr()
                self.state = 99
                self.g_term()
                self.state = 100
                self.match(TermParser.RIGHT_PARENS)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == TermParser.LEFT_PARENS):
                    break

            self.state = 106
            self.match(TermParser.RIGHT_PARENS)
            self.state = 107
            self.g_term()
            self.state = 108
            self.match(TermParser.RIGHT_PARENS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sort_exprContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.LEFT_PARENS)
            else:
                return self.getToken(TermParser.LEFT_PARENS, i)

        def POSITIVE_INT_CONST(self):
            return self.getToken(TermParser.POSITIVE_INT_CONST, 0)

        def RIGHT_PARENS(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.RIGHT_PARENS)
            else:
                return self.getToken(TermParser.RIGHT_PARENS, i)

        def SYMBOL(self, i: int = None):
            if i is None:
                return self.getTokens(TermParser.SYMBOL)
            else:
                return self.getToken(TermParser.SYMBOL, i)

        def sort_expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TermParser.Sort_exprContext)
            else:
                return self.getTypedRuleContext(TermParser.Sort_exprContext, i)

        def getRuleIndex(self):
            return TermParser.RULE_sort_expr

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSort_expr"):
                return visitor.visitSort_expr(self)
            else:
                return visitor.visitChildren(self)

    def sort_expr(self):

        localctx = TermParser.Sort_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sort_expr)
        self._la = 0  # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.match(TermParser.T__5)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(TermParser.T__6)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.match(TermParser.T__7)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 113
                self.match(TermParser.LEFT_PARENS)
                self.state = 114
                self.match(TermParser.T__8)
                self.state = 115
                self.match(TermParser.POSITIVE_INT_CONST)
                self.state = 116
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(TermParser.LEFT_PARENS)
                self.state = 118
                self.match(TermParser.T__9)
                self.state = 119
                self.match(TermParser.LEFT_PARENS)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 120
                    self.match(TermParser.SYMBOL)
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == TermParser.SYMBOL):
                        break

                self.state = 125
                self.match(TermParser.RIGHT_PARENS)
                self.state = 126
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 127
                self.match(TermParser.LEFT_PARENS)
                self.state = 128
                self.match(TermParser.T__10)
                self.state = 129
                self.sort_expr()
                self.state = 130
                self.sort_expr()
                self.state = 131
                self.match(TermParser.RIGHT_PARENS)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 133
                self.match(TermParser.SYMBOL)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LiteralContext(ParserRuleContext):
        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return TermParser.RULE_literal

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class Real_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL_CONST(self):
            return self.getToken(TermParser.REAL_CONST, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitReal_literal"):
                return visitor.visitReal_literal(self)
            else:
                return visitor.visitChildren(self)

    class N_int_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEGATIVE_INT_CONST(self):
            return self.getToken(TermParser.NEGATIVE_INT_CONST, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitN_int_literal"):
                return visitor.visitN_int_literal(self)
            else:
                return visitor.visitChildren(self)

    class Bool_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOL_CONST(self):
            return self.getToken(TermParser.BOOL_CONST, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBool_literal"):
                return visitor.visitBool_literal(self)
            else:
                return visitor.visitChildren(self)

    class Bv_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BV_CONST(self):
            return self.getToken(TermParser.BV_CONST, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBv_literal"):
                return visitor.visitBv_literal(self)
            else:
                return visitor.visitChildren(self)

    class P_int_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def POSITIVE_INT_CONST(self):
            return self.getToken(TermParser.POSITIVE_INT_CONST, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitP_int_literal"):
                return visitor.visitP_int_literal(self)
            else:
                return visitor.visitChildren(self)

    class Enum_literalContext(LiteralContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a TermParser.LiteralContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enum_const(self):
            return self.getTypedRuleContext(TermParser.Enum_constContext, 0)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEnum_literal"):
                return visitor.visitEnum_literal(self)
            else:
                return visitor.visitChildren(self)

    def literal(self):
